third_party/rust/paste/tests/ui/env-unexpected.stderr
error: unexpected token in env! macro
 --> tests/ui/env-unexpected.rs:4:21
  |
4 |     fn [<env!("VAR" "VAR")>]() {}
  |                     ^^^^^
