third_party/rust/paste/tests/ui/env-unexpected.rs
use paste::paste;

paste! {
    fn [<env!("VAR" "VAR")>]() {}
}

fn main() {}
